# engine-research

./: README.md
engine/: CMakeLists.txt
engine/src/: Engine.cpp  Engine.h  defines.h
engine/src/Core/: Log.cpp  Log.h
engine/src/Platform/Common/: BaseWindow.h  Types.h  WindowEvent.h
engine/src/Platform/Windows/: WindowsPlatform.h  WindowsWindow.cpp  WindowsWindow.h
engine/src/Renderer/: RendererBackend.cpp  RendererBackend.h  RendererFrontend.cpp  RendererFrontend.h  RendererTypes.h
engine/src/Renderer/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanContext.cpp  VulkanContext.h  VulkanPlatform.h  VulkanTypes.h
engine/src/Renderer/Vulkan/Devices/: VulkanDevice.cpp  VulkanDevice.h
engine/src/Renderer/Vulkan/Images/: Image.cpp  Image.h
engine/src/Renderer/Vulkan/Platform/: vk_windows.h
engine/src/Renderer/Vulkan/Renderpass/: CommandBuffer.cpp  CommandBuffer.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  Renderpass.cpp  Renderpass.h  Swapchain.cpp  Swapchain.h
engine/src/Renderer/Vulkan/Utils/: VulkanHelper.h
testbed/: CMakeLists.txt
testbed/src/: main.cpp
